working on overlaps issue.

--- a/styles/base.css
+++ b/styles/base.css
@@ -50,8 +50,8 @@ h4 {font-size: 1.25em;}
 small, .font_small {font-size: 0.8em;}
 
 p {
-  /*padding: .4em 0;*/
-  margin-bottom: 1.3em;
+  padding: .4em 0;
+  /*margin-bottom: 1.3em;*/
 }
 
 article {
@@ -74,7 +74,7 @@ a:visited {
   color: #630300;
 }
 
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 740px) {
   body {
     background: #272c28 url("../img/headband_wide.jpg") no-repeat fixed center top;
     background-size: cover;
