--- a/styles/layout.css
+++ b/styles/layout.css
@@ -37,6 +37,6 @@
   color: #f5f2e1;
 }
 
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 740px) {
 
 }
